[package]
name = "aaron_blog"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = "0.5.0-rc.2"
schemars = { version = "0.8" }
serde = "1.0"
handlebars = "4.3.0"
async-trait = "*"

entity = { path = "./entity" }
migration = { path = "./migration" }

[workspace]
members = [".", "api", "biz", "entity", "migration"]

[dependencies.api]
path = "api"


[dependencies.post]
path = "src/post"

[dependencies.rocket_okapi]
git = "https://github.com/GREsau/okapi.git"
features = ["swagger", "rapidoc", "rocket_db_pools" ]
version = "^0.8.0-rc.2"

[dependencies.rocket_cors]
git = "https://github.com/lawliet89/rocket_cors.git"
rev = "54fae070"
default-features = false

[dependencies.rocket_db_pools]
version = "0.1.0-rc.2"
features = ["sqlx_postgres"]

[dependencies.sea-orm]
version = "^0.10.5"
features = [
    "runtime-tokio-native-tls",
    "sqlx-postgres",
]

[dev-dependencies]
tokio = "1.20.0"

[profile.release]
strip = true
