[package]
name = "api"
version = "0.1.0"
authors = ["BBOYADAO <bboyadao@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
biz = { path = "../biz" }
entity = { path = "../entity" }
migration = { path = "../migration" }
async-stream = { version = "^0.3" }
async-trait = { version = "0.1" }

futures = { version = "^0.3" }
futures-util = { version = "^0.3" }
rocket = { version = "0.5.0-rc.2", features = [
  "json",
] }
rocket_dyn_templates = { version = "0.1.0-rc.1", features = [
  "tera",
] }
serde_json = { version = "^1" }
serde = "*"
tokio = "1.20.0"
sea-orm = "0.10.5"
sea-orm-rocket = "*"

[dependencies.rocket_okapi]
git = "https://github.com/GREsau/okapi.git"
features = ["swagger", "rapidoc", "rocket_db_pools" ]
version = "^0.8.0-rc.2"