[package]
name = "post"
version = "0.1.0"
edition = "2021"


[dependencies]
rocket = "0.5.0-rc.2"
schemars = { version = "0.8" }
serde = "1.0"
handlebars = "4.3.0"
async-trait = "*"

[dependencies.rocket_okapi]
git = "https://github.com/GREsau/okapi.git"
features = ["swagger", "rapidoc", "rocket_db_pools" ]
version = "^0.8.0-rc.2"